@@ -32,15 +32,20 @@ namespace Steinberg
         {
             SMTG_CONSTEXPR const CString kFx                    = "Fx";             ///< others type (not categorized)
             SMTG_CONSTEXPR const CString kFxAnalyzer            = "Fx|Analyzer";    ///< Scope, FFT-Display, Loudness Processing...
+            SMTG_CONSTEXPR const CString kFxBass                = "Fx|Bass";        ///< Tools dedicated to Bass Guitar
+            SMTG_CONSTEXPR const CString kFxChannelStrip        = "Fx|Channel Strip"; ///< Tools dedicated to Channel Strip
             SMTG_CONSTEXPR const CString kFxDelay               = "Fx|Delay";       ///< Delay, Multi-tap Delay, Ping-Pong Delay...
             SMTG_CONSTEXPR const CString kFxDistortion          = "Fx|Distortion";  ///< Amp Simulator, Sub-Harmonic, SoftClipper...
+            SMTG_CONSTEXPR const CString kFxDrums               = "Fx|Drums";       ///< Tools dedicated to Drums...
             SMTG_CONSTEXPR const CString kFxDynamics            = "Fx|Dynamics";    ///< Compressor, Expander, Gate, Limiter, Maximizer, Tape Simulator, EnvelopeShaper...
             SMTG_CONSTEXPR const CString kFxEQ                  = "Fx|EQ";          ///< Equalization, Graphical EQ...
             SMTG_CONSTEXPR const CString kFxFilter              = "Fx|Filter";      ///< WahWah, ToneBooster, Specific Filter,...
             SMTG_CONSTEXPR const CString kFxGenerator           = "Fx|Generator";   ///< Tone Generator, Noise Generator...
+            SMTG_CONSTEXPR const CString kFxGuitar              = "Fx|Guitar";      ///< Tools dedicated to Guitar
             SMTG_CONSTEXPR const CString kFxInstrument          = "Fx|Instrument";  ///< Fx which could be loaded as Instrument too
             SMTG_CONSTEXPR const CString kFxInstrumentExternal  = "Fx|Instrument|External"; ///< Fx which could be loaded as Instrument too and is external (wrapped Hardware)
             SMTG_CONSTEXPR const CString kFxMastering           = "Fx|Mastering";   ///< Dither, Noise Shaping,...
+            SMTG_CONSTEXPR const CString kFxMicrophone          = "Fx|Microphone";  ///< Tools dedicated to Microphone
             SMTG_CONSTEXPR const CString kFxModulation          = "Fx|Modulation";  ///< Phaser, Flanger, Chorus, Tremolo, Vibrato, AutoPan, Rotary, Cloner...
             SMTG_CONSTEXPR const CString kFxNetwork             = "Fx|Network";     ///< using Network
             SMTG_CONSTEXPR const CString kFxPitchShift          = "Fx|Pitch Shift"; ///< Pitch Processing, Pitch Correction, Vocal Tuning...
@@ -49,7 +54,7 @@ namespace Steinberg
             SMTG_CONSTEXPR const CString kFxSpatial             = "Fx|Spatial";     ///< MonoToStereo, StereoEnhancer,...
             SMTG_CONSTEXPR const CString kFxSurround            = "Fx|Surround";    ///< dedicated to surround processing: LFE Splitter, Bass Manager...
             SMTG_CONSTEXPR const CString kFxTools               = "Fx|Tools";       ///< Volume, Mixer, Tuner...
-            SMTG_CONSTEXPR const CString kFxVocals              = "Fx|Vocals";      ///< Tools dedicated to vocals
+            SMTG_CONSTEXPR const CString kFxVocals              = "Fx|Vocals";      ///< Tools dedicated to Vocals
 
             SMTG_CONSTEXPR const CString kInstrument            = "Instrument";         ///< Effect used as instrument (sound generator), not as insert
             SMTG_CONSTEXPR const CString kInstrumentDrum        = "Instrument|Drum";    ///< Instrument for Drum sounds
