@@ -4,6 +4,7 @@
 
 === 1.0.19 ===
 * Updated CLAP headers to 1.2.2.
+* Updated VST3 headers to match the 3.7.12 SDK.
 * Updated build scripts.
 
 === 1.0.18 ===
